--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "keywords": [
       "Elm",
       "HTML",
-      "convert",
+      "convert"
   ],
   "repository": "https://github.com/jzmstrjp/atom-html-elmfier",
   "license": "MIT",
