--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "html-elmfier",
   "main": "./lib/html-elmfier",
   "version": "0.5.0",
-  "description": "Please paste HTML, and it become Elm.",
+  "description": "Please paste HTML, and it becomes Elm.",
   "keywords": [
     "Elm",
     "HTML",
