refactor: introduce a linter.
ESLintを導入。適当にairbnbスタイルにしてみました。`npx eslint 
.`コマンドでLinterエラーを列挙できます。coding 
style周りマジで信じられないぐらいボロボロなので、Linter絶対入れてください。

--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
+  }
 }
